# ubb

./: .gitignore  .gitmodules  README.md
01/Computer_System_Architecture/Seminar_01/: seminar_01.asm
Semester_01/Algebra/P1/: 01_output.txt  02_output.txt  main.py
Semester_01/Algebra/P2/: 01_output.txt  02_output.txt  03_output.txt  04_output.txt  05_output.txt  main  main.cpp  main.py
Semester_01/Algebra/P3/: 02_output.txt  03_output.txt  05_output.txt
Semester_01/Algebra/P4/: 02_output.txt  03_output.txt  04_output.txt  05_output.txt
Semester_01/Algebra/P5/: 03_output.txt  04_output.txt  05_output.txt
Semester_01/Computational_Logic/HW_Conversions/: README.md  lib.html  lib.py  main.html  main.py  ui.py
Semester_01/Computer_System_Architecture/Exam/: 18feb2019.asm
Semester_01/Computer_System_Architecture/Laborator_02/: lab2.asm
Semester_01/Computer_System_Architecture/Laborator_03/: unsigned.asm
Semester_01/Linear_Algebra/P1/: 03_output.txt  04_output.txt  05_output.txt
Semester_01/Linear_Algebra/P2/: 01_output.txt
Semester_01/Linear_Algebra/P3/: 01_output.txt  04_output.txt  Untitled.ipynb  main.py
Semester_01/Linear_Algebra/P4/: 01_output.txt  main.py
Semester_01/Linear_Algebra/P5/: 01_output.txt  main.py
Semester_01/Mathematical_Analysis/Seminar_04/: alternating_sum.py  requirements.txt
Semester_01/Mathematical_Analysis/Seminar_05/: extra.py  main.py
Semester_01/Mathematical_Analysis/Seminar_06/: extra.ipynb  extra.tex
Semester_01/Mathematical_Analysis/Seminar_07/: hw.ipynb  hw.tex
Semester_01/Mathematical_Analysis/Seminar_08/: hw.ipynb  main.tex
Semester_01/Mathematical_Analysis/Seminar_12/: lbc.ipynb  main.tex
Semester_01/Mathematical_Analysis/seminar_09/: hw.ipynb  hw.tex
Semester_02/DS/practice/: 911.html  911.mw  9111.html  911TOC.html  911_corect.mw  Untitled.mw  actual_test.mw  lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  t.mw  t1.mw  t1.tex  t2023.mw  test.mw  testtoday.mw
Semester_02/DSA/L1_ADT_BAG/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp
Semester_02/DSA/L2_ADT_MATRIX/: App.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
Semester_02/DSA/L3_ADT_SORTED_MAP/: App.cpp  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  (+3 more)
Semester_02/Geometry/: partial2_gippity.md
Semester_02/OOP/Labs/A10/: CMakeLists.txt  adopted.csv  dogs.db  dogs.txt  main.cpp
Semester_02/OOP/Labs/A10/headers/domain/: action.h
Semester_02/OOP/Labs/A10/headers/qt/: window.h
Semester_02/OOP/Labs/A10/headers/repository/: dog_type_repository.h  html_repository.h  repository.h
Semester_02/OOP/Labs/A10/headers/service/: service.h
Semester_02/OOP/Labs/A10/headers/ui/: ui.h
Semester_02/OOP/Labs/A10/src/qt/: window.cpp
Semester_02/OOP/Labs/A10/src/repository/: AdoptedList.cpp  file_repository.cpp  repository.cpp
Semester_02/OOP/Labs/A10/src/service/: service.cpp
Semester_02/OOP/Labs/A10/src/tests/: tests.cpp
Semester_02/OOP/Labs/A10/src/ui/: ui.cpp
Semester_02/OOP/Labs/A2-3/: CMakeLists.txt  README.md  main.c  test_functions.c  test_functions.h
Semester_02/OOP/Labs/A2-3/headers/controller/: service.h
Semester_02/OOP/Labs/A2-3/headers/domain/: domain.h  dynarray.h  func_operation.h
Semester_02/OOP/Labs/A2-3/headers/repository/: repository.h  undo_repository.h
Semester_02/OOP/Labs/A2-3/headers/ui/: ui.h
Semester_02/OOP/Labs/A2-3/src/controller/: service.c
Semester_02/OOP/Labs/A2-3/src/domain/: domain.c  dynarray.c  func_operation.c
Semester_02/OOP/Labs/A2-3/src/repository/: repository.c  undo_repository.c
Semester_02/OOP/Labs/A2-3/src/ui/: ui.c
Semester_02/OOP/Labs/A4-5/: CMakeLists.txt  README.md  main.cpp
Semester_02/OOP/Labs/A4-5/headers/domain/: domain.h  dyn_array.h
Semester_02/OOP/Labs/A4-5/headers/repository/: dog_type_repository.h  repository.h
Semester_02/OOP/Labs/A4-5/headers/service/: service.h
Semester_02/OOP/Labs/A4-5/headers/tests/: tests.h
Semester_02/OOP/Labs/A4-5/headers/ui/: ui.h
Semester_02/OOP/Labs/A4-5/src/domain/: domain.cpp
Semester_02/OOP/Labs/A4-5/src/repository/: repository.cpp
Semester_02/OOP/Labs/A4-5/src/service/: service.cpp
Semester_02/OOP/Labs/A4-5/src/tests/: tests.cpp
Semester_02/OOP/Labs/A4-5/src/ui/: ui.cpp
Semester_02/OOP/Labs/A6-7/: CMakeLists.txt  adopted.csv  adopted.html  dogs.db  dogs.txt  example.html  main.cpp
Semester_02/OOP/Labs/A6-7/headers/domain/: DogValidator.h  domain.h
Semester_02/OOP/Labs/A6-7/headers/repository/: AdoptedList.h  csv_repository.h  db_repository.h  file_repository.h
Semester_02/OOP/Labs/A6-7/src/repository/: csv_repository.cpp  html_repository.cpp
Semester_02/OOP/Labs/A6-7/src/service/: service.cpp
Semester_02/OOP/Labs/test3/shopping_list/: CMakeLists.txt  domain.h  gui.cpp  gui.h  items.txt  main.cpp  repository.cpp  repository.h  script.sh  service.h
Semester_02/OOP/Seminars/Seminar_01/Test/: CMakeLists.txt  YourProjectName  distances.cpp  distances.h  main.cpp  math.h
Semester_02/OOP/Seminars/Seminar_05/: Action.h  CMakeLists.txt  CSVPlaylist.cpp  FilePlaylist.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Song.cpp  Songs.txt  UI.cpp  main.cpp
Semester_02/OOP/exam/practice/drive_connect/: CMakeLists.txt  domain.h  drivers.txt  main.cpp  reports.txt  repository.h  session.h  subject.h  window.cpp  window.h  winmap.h
Semester_02/OS/: 13.06.2024.txt
Semester_03/MAP/: exam.md
Semester_04/mpp/: .env.example  check_monitoring_status.js  clear_monitored.sh  clear_monitored_users.js  components.json  debug_monitoring.js  jest.config.mjs  jest.setup.js  jmeter-results.jtl  package.json  parallel_stress_test.sh  pnpm-lock.yaml  rapid_http_test.sh  run_test.sh  simulate_monitoring.js  start-database.sh  stress_test_monitoring.sh  test_monitor.js  test_monitoring.sh  test_rapid_api.sh  verify_monitoring.js
Semester_04/mpp-exam/: .env.example  next.config.js  package.json  pnpm-lock.yaml
Semester_06/NLP/: task1.py  task1_results.txt
(+1690 files in other folders)
